# the-art-of-larceny

./: .gitignore  Cargo.toml  README.md
assets/: story.txt
assets/levels/data/: d_house.txt
assets/levels/stories/: s_house.txt
assets/scores/: load_factory_score.scn.ron
src/: components.rs  main.rs  systems.rs
src/game/: components.rs  mod.rs  systems.rs
src/game/board/: components.rs  mod.rs  systems.rs
src/game/bundle/: camera.rs  extraction.rs  footage.rs  guard.rs  item.rs  laser.rs  mod.rs  player.rs  scenery.rs  security.rs  target.rs
src/game/playground/: components.rs  mod.rs  systems.rs
src/game/playground/camera/: components.rs  mod.rs  systems.rs
src/game/playground/extraction/: components.rs  mod.rs  systems.rs
src/game/playground/footage/: components.rs  mod.rs  systems.rs
src/game/playground/guard/: components.rs  mod.rs  systems.rs
src/game/playground/item/: components.rs  mod.rs  systems.rs
src/game/playground/laser/: components.rs  mod.rs  systems.rs
src/game/playground/player/: components.rs  mod.rs  systems.rs
src/game/playground/scenery/: components.rs  mod.rs  systems.rs
src/game/playground/security/: components.rs  mod.rs  systems.rs
src/load_menu/: components.rs  level_story.rs  mod.rs  systems.rs
src/main_menu/: components.rs  mod.rs  systems.rs
src/pause_menu/: components.rs  mod.rs  systems.rs
src/score_menu/: components.rs  mod.rs  systems.rs
